# docs/swagger.json
@@ -547,7 +547,41 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Room"
+                            "$ref": "#/definitions/domain.ROOM"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/room/active": {
+            "post": {
+                "description": "Update room is active",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "room"
+                ],
+                "summary": "Update room is active",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Is Active",
+                        "name": "isActive",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payload.RoomUpdateRoomIsActiveDTO"
                         }
                     }
                 ],
@@ -620,7 +654,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Room"
+                            "$ref": "#/definitions/domain.ROOM"
                         }
                     }
                 ],
@@ -673,6 +707,33 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/domain.RoomType"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/room_type/active": {
+            "post": {
+                "description": "Update room type is active",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "room_type"
+                ],
+                "summary": "Update room type is active",
+                "parameters": [
+                    {
+                        "description": "Payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/payload.UpdateRoomTypeIsActiveDTO"
                         }
                     }
                 ],
@@ -844,6 +905,29 @@
                 "DEFAULT"
             ]
         },
+        "domain.ROOM": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isActive": {
+                    "type": "boolean"
+                },
+                "roomNumber": {
+                    "type": "string"
+                },
+                "roomType": {
+                    "$ref": "#/definitions/domain.RoomType"
+                },
+                "updateAt": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.Response": {
             "type": "object",
             "properties": {
@@ -854,29 +938,6 @@
                 },
                 "success": {
                     "type": "boolean"
-                }
-            }
-        },
-        "domain.Room": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_active": {
-                    "type": "boolean"
-                },
-                "room_number": {
-                    "type": "string"
-                },
-                "room_type": {
-                    "$ref": "#/definitions/domain.RoomType"
-                },
-                "updateAt": {
-                    "type": "string"
                 }
             }
         },
@@ -897,6 +958,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "price": {
+                    "type": "number"
                 },
                 "updateAt": {
                     "type": "string"
@@ -1019,13 +1083,28 @@
                 }
             }
         },
+        "payload.RoomUpdateRoomIsActiveDTO": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "isActive": {
+                    "type": "boolean"
+                }
+            }
+        },
         "payload.UpdateRoomType": {
             "type": "object",
             "required": [
                 "detail",
                 "id",
                 "isActive",
-                "name"
+                "name",
+                "price"
             ],
             "properties": {
                 "detail": {
@@ -1039,6 +1118,23 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
+        "payload.UpdateRoomTypeIsActiveDTO": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "isActive": {
+                    "type": "boolean"
                 }
             }
         },
